feat: :sparkles: devolviendo url segura al momento de crear una imagen

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 POSTGRES_USER=MiUsuario
 POSTGRES_PASSWORD=MiContraseñaSegura
 POSTGRES_DB=MiBaseDeDatos
+
+PORT=3000
+HOST_API=http://localhost:3000/api
