--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ POSTGRES_DB=MiBaseDeDatos
 
 PORT=3000
 HOST_API=http://localhost:3000/api
+
+JWT_SECRET=mi_llave_secreta_super_segura
+JWT_EXPIRES_IN=1h
