--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 POSTGRES_USER=MiUsuario
 POSTGRES_PASSWORD=MiContraseñaSegura
 POSTGRES_DB=MiBaseDeDatos
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 
 PORT=3000
 HOST_API=http://localhost:3000/api
